syntax = "proto3";

option csharp_namespace = "DurakServer";

package durak;

service DurakGame {
  rpc DurakStreaming (stream DurakRequest) returns (stream DurakReply);
  rpc StartTimerStreaming (TimerRequest) returns (stream TimerReply);
}

message DurakRequest {
	oneof Request {
		PlayRequest playRequest = 1;
		DialogRequest dialogRequest = 2;
		TurnRequest turnRequest = 3;
		EndAttackRequest endAttackRequest = 4;
		EndDefenceRequest endDefenceRequest = 5;
		EndAddingRequest endAddingRequest = 6;
	}
}

message PlayRequest {
}

message DialogRequest {
	Dialog dialog = 1;
}

message TurnRequest {
	Card card = 1;
}

message EndAttackRequest {
}

message EndDefenceRequest {
}

message EndAddingRequest {
}

message TimerRequest {
    int32 lobbyId = 1;
	string username = 2;
}

message DurakReply {
	oneof Reply {
		LobbyReply lobbyReply = 1;
		DialogReply dialogReply = 2;
		TurnReply turnReply = 3;
		EndAttackReply endAttackReply = 4;
		EndDefenceReply endDefenceReply = 5;
		EndAddingReply endAddingReply = 6;
		FinishGameRoundReply finishGameRoundReply = 7;
		EnableTwoPlayersModeReply enableTwoPlayersModeReply = 8;
		GameEndReply gameEndReply = 9;
	}
}

message LobbyReply {
	int32 id = 1;
	DurakNetPlayer iPlayer = 2;
	repeated DurakNetPlayer enemyPlayers = 3;
	repeated Card deckBox = 4;
	Card trump = 5;
}

message DialogReply {
	Dialog dialog = 1;
	string username = 2;
}

message TurnReply {
	Card card = 1;
}

message EndAttackReply {
	DurakNetPlayer iPlayer = 1;
	repeated DurakNetPlayer enemyPlayers = 2;
}

message EndDefenceReply {
	DurakNetPlayer iPlayer = 1;
	repeated DurakNetPlayer enemyPlayers = 2;
}

message EndAddingReply {
	DurakNetPlayer iPlayer = 1;
	repeated DurakNetPlayer enemyPlayers = 2;
}

message FinishGameRoundReply {
	DurakNetPlayer iPlayer = 1;
	repeated DurakNetPlayer enemyPlayers = 2;
}

message EnableTwoPlayersModeReply {
	DurakNetPlayer iPlayer = 1;
	repeated DurakNetPlayer enemyPlayers = 2;
}

message GameEndReply {
	repeated WinnerPlayer winnerPlayers = 1;
	string winMessage = 2;
}

message WinnerPlayer {
	string username = 1;
	int32 beetCount = 2;
}

message TimerReply {
    int32 time = 1;
	string username = 2;
}

message DurakNetPlayer {
	string username = 1;
	repeated Card hand = 2;
	Role role = 3;
}

message Card {
	Rank rank = 1;
	Suit suit = 2;
}

enum Rank {
	None = 0;
	Six = 6;
	Seven = 7;
	Eight = 8;
	Nine = 9;
	Ten = 10;
	Jack = 11;
	Queen = 12;
	King = 13;
	Ace = 14;
}

enum Suit {
	Club = 0;
	Diamond = 1;
	Heart = 2;
	Spade = 3;
}

enum Role {
	Attacker = 0;
	Defender = 1;
	Adder = 2;
	Waiter = 3;
	FormerAttacker = 4;
	Inactive = 5;
}

enum Status {
	canNothing = 0;
	canAttack = 1;
	canDefence = 2;
	canPass = 3;
}

enum Dialog {
	Oi = 0;
	Hi = 1;
	NiceGame = 2;
	GoodLuck = 3;
	Hurry = 4;
	Thanks = 5;
}